chore: fixed window top bar icons color with dark theme on Windows

--- a/src/assets/scss/dark-theme.scss
+++ b/src/assets/scss/dark-theme.scss
@@ -257,6 +257,10 @@ body.dark-theme {
     button {
       background-color: $dark-button-color;
     }
+    button.mat-button-disabled {
+      background-color: #848484;
+      color: #4F4F4F;
+    }
     div.ng-select-container {
       caret-color: $dark-main-text-color;
       background-color: $dark-select-component;
@@ -428,5 +432,11 @@ body.dark-theme {
 
   .ng-dropdown-panel .ng-dropdown-panel-items .ng-option {
     color: $dark-main-text-color!important;
+  }
+
+  .app-windows-detected .window-buttons .minimize:hover img,
+  .app-windows-detected .window-buttons .maximize:hover img,
+  .app-windows-detected .window-buttons .quit:hover img {
+    filter: invert(1);
   }
 }
