--- a/src/assets/scss/dark-theme.scss
+++ b/src/assets/scss/dark-theme.scss
@@ -435,8 +435,14 @@ body.dark-theme {
   }
 
   .app-windows-detected .window-buttons .minimize:hover img,
-  .app-windows-detected .window-buttons .maximize:hover img,
-  .app-windows-detected .window-buttons .quit:hover img {
+  .app-windows-detected .window-buttons .maximize:hover img {
     filter: invert(1);
+    position: relative;
+    top: 1px;
+  }
+  .app-windows-detected .window-buttons .quit:hover img {
+    filter: invert(0);
+    position: relative;
+    top: 1px;
   }
 }
