chore: fixed SSM spinner loader style with dark theme

--- a/src/assets/scss/dark-theme.scss
+++ b/src/assets/scss/dark-theme.scss
@@ -448,4 +448,9 @@ body.dark-theme {
   .app-windows-detected .window-buttons .quit:hover img {
     filter: invert(0);
   }
+
+  ///* SSM Loader *///
+  .loader .fa-spinner{
+    color: $dark-main-text-color;
+  }
 }
