--- a/desktop-app/src/app/components/dialogs/edit-dialog/edit-dialog.component.html
+++ b/desktop-app/src/app/components/dialogs/edit-dialog/edit-dialog.component.html
@@ -14,25 +14,83 @@
     <small class="text-error" *ngIf="(form.controls['name'].dirty || form.controls['name'].touched) && form.controls['name'].errors">Insert a Session Alias</small>
   </div>
 
+  <!-- ================================================================== -->
+  <!-- ==         ARN IAM ROLE FEDERATED & IAM ROLE CHAINED            == -->
+  <!-- ================================================================== -->
+  <ng-container *ngIf="accountType === eSessionType.awsIamRoleFederated || accountType === eSessionType.awsIamRoleChained">
+    <div class="form-field">
+      <label>Role ARN</label>
+      <input formControlName="roleArn" type="text" class="form-control" placeholder="Role ARN" />
+      <small class="text-error" *ngIf="(form.controls['roleArn'].dirty || form.controls['roleArn'].touched) && form.controls['roleArn'].errors">Insert the Role ARN</small>
+    </div>
+  </ng-container>
+
+  <ng-container *ngIf="accountType === eSessionType.awsIamRoleFederated">
+    <!-- ================================================================== -->
+    <!-- ==             SAML & IDP ARN FOR IAM ROLE FEDERATED            == -->
+    <!-- ================================================================== -->
+    <div class="form-field">
+      <label>SAML 2.0 Url</label>
+      <app-leapp-select [controlName]="'federationUrl'"
+                        [form]="form"
+                        [placeholder]="'SAML 2.0 Url*'"
+                        [items]="idpUrls"
+                        [dropdownPosition]="'up'"
+                        [whatToAddName]="'SAML 2.0 Url'"
+                        [defaultNewValue]="addNewUUID"
+                        [bindLabel]="'label'"
+                        [bindValue]="'value'"
+                        [uppercased]="false"
+                        (selected)="selectedIdpUrlEvent($event);"></app-leapp-select>
+
+      <small class="text-error" *ngIf="(form.controls['federationUrl'].dirty || form.controls['federationUrl'].touched) && form.get('federationUrl')?.value === undefined">Insert the SAML 2.0 Url</small>
+    </div>
+
+    <div class="form-field">
+      <label>Identity Provider</label>
+      <input formControlName="idpArn" type="text" class="form-control" placeholder="Identity Provider ARN *">
+      <small class="text-error" *ngIf="(form.controls['idpArn'].dirty || form.controls['idpArn'].touched) && form.controls['idpArn'].errors">Insert the AWS Identity Provider ARN</small>
+    </div>
+  </ng-container>
+
   <div class="form-group">
     <label>Aws Region</label>
     <ng-select formControlName="awsRegion" bindLabel="region" bindValue="region" [items]="regions" [(ngModel)]="selectedRegion"></ng-select>
   </div>
 
-  <div class="form-group">
-    <label>Mfa Device</label>
-    <input formControlName="mfaDevice" type="text" class="form-control" placeholder="MFA arn or SN (optional)" />
-  </div>
+  <ng-container *ngIf="accountType === eSessionType.awsIamUser">
 
-  <div class="form-group">
-    <label>Access Key ID</label>
-    <input formControlName="accessKey" type="password" class="form-control" placeholder="Access Key *">
-  </div>
+    <div class="form-group">
+      <label>Mfa Device</label>
+      <input formControlName="mfaDevice" type="text" class="form-control" placeholder="MFA arn or SN (optional)" />
+    </div>
 
-  <div class="form-group">
-    <label>Secret Access Key</label>
-    <input formControlName="secretKey" type="password" class="form-control" placeholder="Secret Key *">
-  </div>
+    <div class="form-group">
+      <label>Access Key ID</label>
+      <input formControlName="accessKey" type="password" class="form-control" placeholder="Access Key *">
+    </div>
+
+    <div class="form-group">
+      <label>Secret Access Key</label>
+      <input formControlName="secretKey" type="password" class="form-control" placeholder="Secret Key *">
+    </div>
+
+  </ng-container>
+
+  <!-- ================================================================== -->
+  <!-- ==                       ASSUMER SESSIONS                       == -->
+  <!-- ================================================================== -->
+  <ng-container *ngIf="accountType === eSessionType.awsIamRoleChained">
+    <div class="form-field">
+      <label>Role Session Name</label>
+      <input formControlName="roleSessionName" type="text" class="form-control" placeholder="Role Session Name" />
+      <small class="text-error" *ngIf="(form.controls['roleSessionName'].dirty || form.controls['roleSessionName'].touched) && form.controls['roleSessionName'].errors">Invalid Role Session Name</small>
+    </div>
+    <div class="form-field">
+      <label>Assumer Session</label>
+      <ng-select formControlName="assumerSession" bindLabel="sessionName" bindValue="session" dropdownPosition="top" [items]="assumerAwsSessions" [(ngModel)]="selectedSession" [disabled]="true" [compareWith]="compareAssumerSessions"></ng-select>
+    </div>
+  </ng-container>
 
   <br>
   <button type="button" (click)="saveAccount();" [disabled]="!formValid()" [ngClass]="!formValid() ? 'mat-button-disabled': ''" *ngIf="accountType">Edit session</button>
