--- a/desktop-app/src/app/components/dialogs/edit-dialog/edit-dialog.component.html
+++ b/desktop-app/src/app/components/dialogs/edit-dialog/edit-dialog.component.html
@@ -156,9 +156,12 @@
       </div>
     </div>
   </ng-container>
-
+  <div class="form-group">
+    <div class="form-field text-right">
+      <a (click)="tryProperties();" class="check-validity btn-link" *ngIf="accountType">Check credentials</a>
+    </div>
+  </div>
   <br>
   <button type="button" (click)="saveAccount();" [disabled]="!formValid()" [ngClass]="!formValid() ? 'mat-button-disabled': ''" *ngIf="accountType">Edit session</button>
-  <button type="button" (click)="tryProperties();" [disabled]="!formValid() " [ngClass]="!formValid() ? 'check-validity mat-button-disabled': 'check-validity'" *ngIf="accountType">Check credentials</button>
   <a (click)="closeModal()" class="cancel">Cancel</a>
 </form>
