chore: added qol fixes for credential process

--- a/desktop-app/src/app/components/dialogs/options-dialog/options-dialog.component.html
+++ b/desktop-app/src/app/components/dialogs/options-dialog/options-dialog.component.html
@@ -61,6 +61,28 @@
           </div>
         </div>
 
+        <ng-container>
+          <h2>AWS Credential Generation</h2>
+          <div class="form-container">
+            <div class="form-group">
+              <div class="form-field">
+                <label><i class="moon-Help fix-top" matTooltip="Note: when switching method a backup of your credentials and config files will be created and the original files cleaned."></i>&nbsp;Method</label>
+                <ng-select formControlName="credentialMethodSelect"
+                           bindLabel="credentialMethod"
+                           bindValue="credentialMethod"
+                           [clearable]="false"
+                           [searchable]="false"
+                           [items]="[{credentialMethod: eConstants.credentialFile}, {credentialMethod: eConstants.credentialProcess}]"
+                           [(ngModel)]="selectedCredentialMethod"
+                           (change)="showWarningModalForCredentialProcess()"
+                           [appendTo]="'body'">
+                </ng-select>
+
+              </div>
+            </div>
+          </div>
+        </ng-container>
+
         <hr class="proxy-settings-section">
 
         <h2 class="proxy-settings-section">Proxy settings</h2>
