--- a/desktop-app/src/app/components/dialogs/options-dialog/options-dialog.component.scss
+++ b/desktop-app/src/app/components/dialogs/options-dialog/options-dialog.component.scss
@@ -105,3 +105,13 @@
   position: relative;
   top: -15px;
 }
+
+.note {
+  padding-top: 10px;
+  display: inline-block;
+}
+
+.fix-top {
+  position: relative;
+  top: 3px;
+}
