--- a/desktop-app/src/assets/scss/dark-theme.scss
+++ b/desktop-app/src/assets/scss/dark-theme.scss
@@ -243,7 +243,7 @@ body.dark-theme {
       background-color: $dark-modal-background;
       color: $dark-main-text-color;
     }
-    label, h2, h4, p {
+    label, h2, h4, p, .note {
       color: $dark-main-text-color;
       a {
         color: $dark-button-color;
