chore: fixed hover on selected session positioning

--- a/desktop-app/src/assets/scss/global.scss
+++ b/desktop-app/src/assets/scss/global.scss
@@ -706,3 +706,13 @@ tr:hover i.hover-azure ~ span {
   position: relative;
   top: -1.5px;
 }
+
+body:not(.dark-theme) td.table-column-1.selected .session-name-td span {
+  position: relative;
+  top: 1px;
+}
+
+body:not(.dark-theme) tr:hover td.table-column-1.selected .session-name-td span {
+  position: relative;
+  top: 0!important;
+}
