chore: fixed role session name automatically generated by auto chained

--- a/packages/desktop-app/src/app/components/dialogs/edit-dialog/edit-dialog.component.html
+++ b/packages/desktop-app/src/app/components/dialogs/edit-dialog/edit-dialog.component.html
@@ -158,7 +158,7 @@
   </ng-container>
   <div class="form-group">
     <div class="form-field text-right">
-      <a (click)="tryProperties();" class="check-validity btn-link" *ngIf="accountType">Test connection</a>
+      <a (click)="tryProperties();" class="check-validity btn-link" *ngIf="accountType">Test credential generation</a>
     </div>
   </div>
   <br>
