--- a/packages/desktop-app/src/app/components/integration-bar/integration-bar.component.html
+++ b/packages/desktop-app/src/app/components/integration-bar/integration-bar.component.html
@@ -86,7 +86,7 @@
     (dblclick)="forceSync(awsSsoConfiguration.id)">
 
     <div mat-line>
-      <img src="assets/images/aws{{leappCoreService.workspaceOptionService.colorTheme === eConstants.darkTheme || (leappCoreService.workspaceOptionService.colorTheme === eConstants.systemDefaultTheme && appService.isDarkMode()) ? '-dark' : ''}}.png" />
+      <img src="assets/images/aws{{optionsService.colorTheme === eConstants.darkTheme || (optionsService.colorTheme === eConstants.systemDefaultTheme && appService.isDarkMode()) ? '-dark' : ''}}.png" />
       <section class="status" matTooltip="{{isOnline(awsSsoConfiguration) ? 'Expiring ' + remainingHours(awsSsoConfiguration) : 'Offline'}}">
         <ng-container *ngIf="isOnline(awsSsoConfiguration)">
           <b class="green-dot"></b>
