--- a/packages/desktop-app/src/app/components/dialogs/options-dialog/options-dialog.component.scss
+++ b/packages/desktop-app/src/app/components/dialogs/options-dialog/options-dialog.component.scss
@@ -22,18 +22,25 @@
   td {
     padding-left: 10px!important;
     padding-right: 10px!important;
+    display: inline-block;
   }
   td:nth-child(1) {
     font-size: 13px;
     font-weight: 400;
     color: $text-black;
-    width: 83%
+    width: 83%;
+    max-width: 395px;
+    overflow: hidden;
   }
   td:nth-child(2) {
-    width: 60px;
+    width: 80px;
+    position:relative;
+    top: calc(50% - 10px);
     button {
       display: inline-block!important;
       margin-left: 10px;
+      position: relative;
+      top: calc(50% - 10px);
     }
   }
 }
