feat: working on electron - dpapi integration

--- a/packages/desktop-app/src/app/components/integration-bar/integration-bar.component.html
+++ b/packages/desktop-app/src/app/components/integration-bar/integration-bar.component.html
@@ -6,12 +6,12 @@
     <div class="loading-content">
       <img src="assets/images/in-browser.png" alt="" class="loading-pc" />
       <br>
-      <span class="loading-text">Don't see the secure AWS Single Sign-On Browser Page? </span><a (click)="gotoWebForm(selectedAwsSsoConfiguration.id)" class="loading-link">Re-launch the window</a>
+      <span class="loading-text">Don't see the secure AWS Single Sign-On Browser Page? </span><a (click)="gotoWebForm(selectedAwsSsoIntegration.id)" class="loading-link">Re-launch the window</a>
     </div>
   </ng-container>
   <ng-container *ngIf="!loadingInBrowser">
     <a class="close-modal" (click)="modalRef.hide();"><i class="moon-Close"></i></a>
-    <h4>{{modifying === 1 ? 'Add New Integration' : 'Edit ' + selectedAwsSsoConfiguration.alias}}</h4>
+    <h4>{{modifying === 1 ? 'Add New Integration' : 'Edit ' + selectedAwsSsoIntegration.alias}}</h4>
 
     <form [formGroup]="form">
       <div class="form-container">
@@ -29,7 +29,7 @@
           <div class="form-field">
             <div class="form-group">
               <label>Alias*</label>
-              <input formControlName="alias" type="url" class="form-control" placeholder="Custom name to identify the configuration" value="{{selectedAwsSsoConfiguration.alias}}">
+              <input formControlName="alias" type="url" class="form-control" placeholder="Custom name to identify the configuration" value="{{selectedAwsSsoIntegration.alias}}">
               <small class="text-error" *ngIf="(form.controls['alias'].dirty || form.controls['alias'].touched) && form.controls['alias'].errors">Insert a custom alias</small>
             </div>
           </div>
@@ -39,7 +39,7 @@
           <div class="form-field">
             <div class="form-group">
               <label>Portal Url*</label>
-              <input formControlName="portalUrl" type="url" class="form-control" placeholder="AWS SSO URL (e.g. https://d-xxxxxxxxxx.awsapps.com/start) *" value="{{selectedAwsSsoConfiguration.portalUrl}}">
+              <input formControlName="portalUrl" type="url" class="form-control" placeholder="AWS SSO URL (e.g. https://d-xxxxxxxxxx.awsapps.com/start) *" value="{{selectedAwsSsoIntegration.portalUrl}}">
               <small class="text-error" *ngIf="(form.controls['portalUrl'].dirty || form.controls['portalUrl'].touched) && form.controls['portalUrl'].errors">Insert a valid SSO portal URL</small>
             </div>
           </div>
@@ -49,7 +49,7 @@
           <div class="form-field">
             <div class="form-group">
               <label>Aws Region</label>
-              <ng-select formControlName="awsRegion" bindLabel="region" bindValue="region" [clearable]="false" [items]="regions" [(ngModel)]="selectedAwsSsoConfiguration.region"></ng-select>
+              <ng-select formControlName="awsRegion" bindLabel="region" bindValue="region" [clearable]="false" [items]="regions" [(ngModel)]="selectedAwsSsoIntegration.region"></ng-select>
             </div>
           </div>
         </div>
@@ -58,7 +58,7 @@
           <div class="form-field">
             <div class="form-group">
               <label>Auth. method</label>
-              <ng-select placeholder="Choose an Authentication method" formControlName="defaultBrowserOpening" bindLabel="type" bindValue="type" [clearable]="false" [items]="[{type: eConstants.inApp.toString() }, {type: eConstants.inBrowser.toString() }]" [(ngModel)]="selectedAwsSsoConfiguration.browserOpening"></ng-select>
+              <ng-select placeholder="Choose an Authentication method" formControlName="defaultBrowserOpening" bindLabel="type" bindValue="type" [clearable]="false" [items]="[{type: eConstants.inApp.toString() }, {type: eConstants.inBrowser.toString() }]" [(ngModel)]="selectedAwsSsoIntegration.browserOpening"></ng-select>
             </div>
           </div>
         </div>
@@ -75,12 +75,12 @@
 </ng-template>
 
 <mat-list>
-  <div mat-subheader class="panel-header"><span>Integrations</span><i class="moon-Add" (click)="$event.preventDefault(); $event.stopPropagation(); gotoForm(1, selectedAwsSsoConfiguration);"></i></div>
+  <div mat-subheader class="panel-header"><span>Integrations</span><i class="moon-Add" (click)="$event.preventDefault(); $event.stopPropagation(); gotoForm(1, selectedAwsSsoIntegration);"></i></div>
 
   <mat-list-item
-    *ngFor="let awsSsoConfiguration of awsSsoConfigurations; let i = index;"
+    *ngFor="let awsSsoConfiguration of awsSsoIntegrations; let i = index;"
     [disableRipple]="true"
-    [ngClass]="selectedSsoConfigurationCheck(awsSsoConfiguration)"
+    [ngClass]="selectedSsoIntegrationCheck(awsSsoConfiguration)"
     (contextmenu)="applyContextMenu(i, awsSsoConfiguration, $event);"
     (click)="applySegmentFilter(awsSsoConfiguration, $event);"
     (dblclick)="forceSync(awsSsoConfiguration.id)">
@@ -100,7 +100,7 @@
     </div>
     <div [matMenuTriggerFor]="integrationMenu" [matMenuTriggerData]="{ configuration: awsSsoConfiguration }" [style.position]="'absolute'" [style.left.px]="menuX" [style.top.px]="menuY"></div>
   </mat-list-item>
-  <mat-list-item (click)="$event.preventDefault(); $event.stopPropagation(); gotoForm(1, selectedAwsSsoConfiguration);">
+  <mat-list-item (click)="$event.preventDefault(); $event.stopPropagation(); gotoForm(1, selectedAwsSsoIntegration);">
     <div mat-line class="gray-line">
       <i class="moon-Add"></i><span>Add Integration</span></div>
   </mat-list-item>
